BUGFIX: Lesson modal z-index incorrect on large screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -300,7 +300,7 @@ body {
         top: 0;
         right: 0;
         left: 0;
-        z-index: 9999;
+        z-index: 1049;
         }
 
         .instructor-admin-button {
